--- a/options.conf
+++ b/options.conf
@@ -1,3 +1,9 @@
+[package]
+name = gnome-characters
+url = https://download.gnome.org/sources/gnome-characters/3.26/gnome-characters-3.26.1.tar.xz
+archives = 
+giturl = https://github.com/GNOME/gnome-characters.git
+
 [autospec]
 # build 32 bit libraries
 32bit = false
