--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = gnome-characters
-url = https://download.gnome.org/sources/gnome-characters/3.34/gnome-characters-3.34.0.tar.xz
+url = https://download.gnome.org/sources/gnome-characters/40/gnome-characters-40.0.tar.xz
 archives = 
 giturl = https://gitlab.gnome.org/GNOME/gnome-characters
 domain = 
