--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = gnome-characters
-url = https://download.gnome.org/sources/gnome-characters/44/gnome-characters-44.0.tar.xz
+url = https://download.gnome.org/sources/gnome-characters/45/gnome-characters-45.0.tar.xz
 archives = 
 giturl = https://gitlab.gnome.org/GNOME/gnome-characters
 domain = 
@@ -60,7 +60,7 @@ skip_tests = true
 # add .so files to the lib package instead of dev
 so_to_lib = false
 # configure build for avx2
-use_avx2 = false
+use_avx2 = true
 # configure build for avx512
 use_avx512 = false
 # add clang flags
